# Set-Theory

./: .gitignore  Makefile  README.md  dune-project  enderton.opam
Agda/: Axioms.agda
Agda/enderton/: Axioms.agda  algebra.agda  exm.agda  relations.agda
Agda/enderton/exercises/: Ch2.agda
Agda/exercises/: Ch2.agda
coq/: LICENSE  _CoqProject
coq/lib/: axioms.v
lib/: Sets.agda  Sets.agdai  axioms.v  dune
